# online-cp

./: .env  .gitignore  404.html  ACI_conf_pred.ipynb  ACI_conf_pred_analysis.ipynb  ACI_linear_experiment.py  ACI_linear_experiment_1000_analysis.ipynb  AUDIT_SUMMARY.md  CHANGELOG.md  CITATION.cff  CPS.py  CRR.py  Copa24.ipynb  KNN.ipynb  NNPM.ipynb  PHASE_12_13_AUDIT_SUMMARY.md  README.md  Ridge_point_predictor.py  classifiers.py  classifiers_dev.py  cpd_test.ipynb  demo_PREMACOP.ipynb  elec_test.ipynb  example.ipynb  example2.ipynb  index.html  kernels.py  lasso.ipynb  martingale.py  martingale_experiment.ipynb  martingale_experiment_seq.ipynb  methods_to_implement.md  mkdocs.yml  objects.inv  one_nearest_neighbours_example.ipynb  online_protocol.ipynb  passive_agressive.ipynb  protected_cps.ipynb  protected_cps_beta.ipynb  pyproject.toml  (+13 more)
.github/: copilot-instructions.md
.github/workflows/: docs.yml  publish.yml  test.yml
.roadmap/: audit.md
api/betting/: index.html
api/classifiers/: index.html
api/cps/: index.html
api/decision/: index.html
api/evaluation/: index.html
api/kernels/: index.html
api/martingale/: index.html
api/metrics/: index.html
api/mondrian/: index.html
api/pipeline/: index.html
api/plotting/: index.html
api/regressors/: index.html
api/serialization/: index.html
api/venn/: index.html
benchmarks/: __init__.py  __main__.py  configs.py  datasets.py  runner.py
data_martingale_experiment/: p_values_satelite_orig.npy  p_values_satelite_shuffle.npy  p_values_usps_orig.npy  p_values_usps_shuffle.npy
docs/: guide.md  quickstart.md
docs/api/: betting.md  classifiers.md  cps.md  decision.md  evaluation.md  kernels.md  martingale.md  metrics.md  mondrian.md  pipeline.md  plotting.md  regressors.md  serialization.md  venn.md
guide/: index.html
notebooks/: conformal_decision_making.ipynb  course_presentation.ipynb  decision-making.ipynb  demo_PREMACOP.ipynb  efficiency_criteria.ipynb  example.ipynb  explanation_CRR.ipynb  guide.ipynb  medical-screening.ipynb  minimal_release_example.ipynb  new_examples.ipynb  one_nearest_neighbours_example.ipynb  pipeline.ipynb  quickstart.ipynb  test_cps.ipynb  test_exchangeability.ipynb  toy-example.ipynb  tutorial.ipynb
oncp/: CPS.py
quickstart/: index.html
scripts/: run-coverage  run-modules  run-notebooks  run-pys
search/: search_index.json
src/oncp/: CRR.py  __init__.py  classifiers.py  martingale.py  regressors.py
src/online_cp/: CPS.py  __init__.py  _serialization.py  betting.py  classifiers.py  decision.py  evaluate.py  evaluation.py  kernels.py  martingale.py  metrics.py  mondrian.py  pipeline.py  plotting.py  preprocessing.py  regressors.py  venn.py
src/online_cp/martingale/: __init__.py  base.py  jumpers.py  legendre.py  sleepers.py  wrappers.py
tests/: conftest.py  test_api_consistency.py  test_benchmark_models.py  test_calibration.py  test_classifiers.py  test_cps.py  test_decision.py  test_evaluation.py  test_kernels.py  test_knn_regressor.py  test_lasso.py  test_martingale.py  test_martingale_legendre.py  test_metrics.py  test_mondrian.py  test_pipeline.py  test_preprocessing.py  test_properties.py  test_properties_adversarial.py  test_regressors.py  test_rng_support.py  test_save_load.py  test_statistical.py  test_streaming_and_plotting.py  test_svm.py  test_venn_abers.py
work_in_progress/: CPD_test.md  CPS_WINE_PROTECTED.ipynb  CPS_WINE_PROTECTED.py  CPS_protection_new.ipynb  CRR_p_values.ipynb  FIGUES_REFLECTION.ipynb  Fertility.ipynb  ICP_protection.ipynb  ICP_protection_messy.ipynb  Mondrian_forest_river.ipynb  PREMACOP.ipynb  PREMACOP_2.ipynb  PREMACOP_decision_making_lstm.ipynb  PREMACOP_protected_decision_making_lstm.ipynb  README.md  abalone.ipynb  beta_KDE.ipynb  beta_estimator.ipynb  beta_kde_mgale_test.ipynb  biodeg.ipynb  course_presentation.ipynb  course_presentation2.ipynb  crr_protection.ipynb  crr_protection_new.ipynb  dibetes.ipynb  efficiency_criteria.ipynb  explanation_CRR.ipynb  export.csv  ideas_for_package.md  kde_dev.ipynb  lstm_quantile_regression.txt  maringale_experiment.ipynb  martingale_experiment.ipynb  methods_to_implement.md  one_nearest_neighbours_example.ipynb  optimal_betting.ipynb  pcc_experiment.ipynb  pcc_experiment_analysis.ipynb  pcc_experiments.py  plugin_dev.ipynb  (+12 more)
work_in_progress/protected_cp/: experiments_to_do.md
