[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "online-cp"
version = "0.2.0"
authors = [
	{ name="Johan Hallberg Szabadvary", email="johan.hallberg.szabadvary@ju.se" },
]
description = "An implementation of online conformal prediction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	'numpy',
	'scipy',
	'joblib >= 1.4.2',
	'matplotlib',
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
fast = [
	"numba",
]
dev = [
	"pytest",
	"ruff",
]
docs = [
	"mkdocs-material",
	"mkdocstrings[python]",
	"mkdocs-macros-plugin",
]
all = [
	"online-cp[fast,dev]",
]

[project.urls]
"Homepage"    = "https://github.com/egonmedhatten/online-cp"
"Bug Tracker" = "https://github.com/egonmedhatten/online-cp/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
	"E",   # pycodestyle errors
	"F",   # pyflakes
	"W",   # pycodestyle warnings
	"I",   # isort (import sorting)
	"UP",  # pyupgrade
	"B",   # flake8-bugbear
]
ignore = [
	"E501",  # line too long (handled by formatter)
	"E731",  # lambda assignment (idiomatic for short math/betting functions)
	"E741",  # ambiguous variable name (common in math code: l, I, O)
	"B905",  # zip-without-strict (not always appropriate)
]

[tool.ruff.lint.isort]
known-first-party = ["online_cp"]

[tool.ruff.format]
docstring-code-format = true
